--- a/public/styles/core/groupview.scss
+++ b/public/styles/core/groupview.scss
@@ -366,8 +366,8 @@
 
 }
 
-// NEXT ROUND COUNTDOWN
-#next-round {
+// RESULTS LAST SECTION COUNTDOWN
+.last {
 	.text {
 	  font-size: 26em;
   	top: 58% !important;
